--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,664 @@
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  font-size: calc(0.0022 * 100vw + 12px);
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  --color-bg: #18111b;
+  --color-text: #eef0f1;
+  --color-blue: #3b49df;
+  --color-red: #df3b3b;
+  --color-green: #3bdf72;
+  --color-gray: #000000;
+  --color-brand:#ff00c8;
+  --color-link: #3bccdf;
+  padding: 0;
+  margin: 0;
+  font-family: 'Noto Sans', sans-serif;
+  background-color: var(--color-bg);
+  color: var(--color-text);
+}
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  background: var(--color-bg);
+}
+::-webkit-scrollbar-thumb {
+  background: var(--color-brand);
+  border-radius: 8px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.light-mode {
+  --color-bg: #ffffff;
+  --color-text: #0e0e0e;
+  --color-link: #3b49df;
 }
+
+
+
+main {
+  top: 0;
+  margin-top: 8rem;
+}
+
+/* flex-boxes */
+
+.simple-flex {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+.simple-flex3 {
+  display: flex;
+  gap: 1rem;
+  padding: 1rem 0;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+.simple-flex3 div {
+  flex: 1 1 160px;
+}
+.simple-flex2 {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+.down-flex {
+  display: flex;
+  flex-direction: column;
+}
+.f-center {
+  align-items: center;
+}
+.f-start {
+  align-items: flex-start;
+}
+.f-start2 {
+  justify-content: flex-start;
+}
+
+.tags-box {
+  width: 15rem;
+  display: flex;
+  flex-direction: column;
+  gap:0.5rem;
+}
+
+.tag-select {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  overflow: visible;
+  align-content: flex-start;
+}
+.tag-select input {
+  padding: 0;
+  width: 10%;
+  align-items: center;
+}
+
+.tag-select label {
+  align-items: center;
+  flex-grow: 1;
+}
+
+.t-center * {
+  text-align: center;
+}
+
+p.t-left {
+  text-align: start;
+}
+
+.pfp {
+  height: 50px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  border: 1px solid var(--color-brand);
+}
+.pfp-n {
+  height: 50px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  border: 1px solid var(--color-text);
+}
+p.link {
+  text-decoration: underline;
+  color: var(--color-link)
+}
+
+.page-content {
+  padding: 1rem calc(0.22 * 100vw - 76px) 4rem;
+  
+}
+.home-page {
+  padding: 1rem calc(0.47 * 100vw - 170px) 3rem;
+  margin-top: 2rem;
+}
+
+.post-content {
+  border: 1px solid var(--color-brand);
+  padding:  1rem;
+  border-radius: 8px;
+
+}
+
+#neil-quote {
+  max-width: 22rem;
+}
+
+.cover {
+  height: 18rem;
+  width: 100%;
+  display: grid;
+  overflow: hidden;
+  border-bottom: 1px solid var(--color-brand);
+}
+
+.cover img {
+  object-fit: cover;
+  width: 100%;
+  height: 18rem;
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.fit-cover {
+  object-fit: cover;
+}
+.cover h1 {
+  padding: 2rem;
+  text-shadow: 2px 2px 2px #000000;
+  color: white;
+  grid-column: 1;
+  grid-row: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+h1 { font-size: 2rem; margin: 1rem 0; }
+h2 { font-size: 1.5rem;  margin: 1rem 0; }
+h3 { font-size: 1.25rem;  margin: 1rem 0; }
+p { font-size: 1rem; }
+p.small { font-size: 0.7rem;}
 
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+* {
+  box-sizing: border-box;
+}
+
+img {max-width: 100%;}
+
+
+fieldset {
+  border: none;
+  padding: 1rem 0;
+  font-size: 1.25rem;
+}
+
+code {
+  overflow-x: scroll;
+}
+
+/* Navbar */
+
+.navbar {
+  height: 8rem;
+  width: 100%;
+  color: var(--colors-text);
+  position: fixed;
+  top: 0;
+  padding: 0 calc(0.22 * 100vw - 76px);
+  font-weight: bold;
+  background-color: var(--color-bg);
+  z-index: 99;
+}
+
+#logo {
+  max-width: 1rem;
+}
+#logo-svg {
+  max-width: 24rem;
+}
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.navbar img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  aspect-ratio: 1/1;
+  cursor: pointer;
+}
+
+.navbar * {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+/* Custom */
+
+.logo-text {
+  font-size: 82px;
+  fill: var(--color-text);
+  height: 100%;
+  width: 100%;
+}
+
+svg.yellow {
+  overflow: visible;
+  height: 90%;
+  max-width: 30rem;
+}
+
+.navbar-right {
+  height: 30%;
+}
+
+.yellow {
+  fill: #ffd600;
+  
+}
+path.green {
+  fill: #55cf3d;
+}
+
+/* */
+
+/* Buttons */
+
+.btn, button {
+  background-color: var(--color-gray);
+  border: none;
+  color: var(--color-text);
+  padding: 1rem 2rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1.1rem;
+  margin: 0.5rem 1rem 0.5rem 0;
+  color: var(--color-text);
+}
+
+
+.soft {
+  font-weight: unset;
+}
+
+button:hover {
+  filter: brightness(90%);
+}
+
+button:disabled,
+button[disabled]{
+  filter: brightness(60%);
+  cursor: not-allowed;
+}
+
+button.btn-brandx {
+  background-color: var(--color-brand);
+  color: var(--color-bg)
+}
+
+button.btn-blue {
+  background-color: var(--color-blue);
+  color: white;
+}
+
+button.btn-red {
+  background-color: var(--color-red);
+  color: white;
+}
+
+button.btn-green {
+  background-color: var(--color-green);
+  color: white;
+}
+
+button.btn-google {
+  background-color: white;
+  color: var(--color-text);
+}
+
+.btn-google img {
+  width: 30px;
+  margin-right: 10px;
+}
+
+button.btn-logo {
+  background-color: var(--color-text);
+  color: white;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+}
+
+/* Cards */
+
+.service-cards {
+  margin: 0;
+  display: flex;
+  overflow: hidden;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.btn-brand {
+  padding: 1rem;
+  border: 1px solid var(--color-brand);
+  border-radius: 8px;
+  margin: 0;
+  color: var(--color-text);
+  background-color: var(--color-bg);
+  cursor: pointer;
+}
+
+.btn-call-m {
+  padding: 1rem;
+  margin: 0;
+  color: var(--color-text);
+  background-color: var(--color-green);
+}
+
+.flex3 {
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.brand-card {
+  border: 1px solid var(--color-brand);
+  border-radius: 8px;
+  margin: 0;
+  color: var(--color-text);
+  background-color: inherit;
+  overflow: hidden;
+  max-height: fit-content;
+  flex: 1 0 33%;
+}
+.grn {
+  border: 1px solid var(--color-green);
+}
+@media only screen and (max-width: 768px) {
+  .brand-card {
+    flex: 1 0 50%;
   }
+}
+
+
+
+.crs-off {
+  cursor: auto
+}
+
+.footer {
+  background-color: var(--color-brand);
+  padding: 1rem;
+  color: var(--color-bg);
+  font-size: .7rem;
+}
+
+.card {
+  padding: 0;
+  margin: 1rem 0;
+  display: flex;
+  border: 1px solid var(--color-brand);
+  border-radius: 8px;
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+}
+
+.card h2 {
+  margin: .25rem 0;
+}
+
+.card-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.card-tags {
+  font-size: 0.8rem;
+}
+
+.card-body {
+  padding: 1rem;
+}
+
+.card footer {
+  display: flex;
+}
+
+.card-img-center {
+  width:20%;
+  display:block;
+  margin:auto;
+  border-radius: 50%;
+  max-width: 150px;
+}
+
+.card-info {
+  color: white;
+  background: var(--color-blue);
+}
+
+/* Loader */
+
+.loader {
+  border: 10px solid var(--color-bg); 
+  border-top: 10px solid var(--color-blue); 
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* File uploads */
+
+input[type="file"] {
+  display: none;
+}
+
+.input[type="slider"]::-webkit-slider-thumb {
+  width: 10px;
+  -webkit-appearance: none;
+  height: 10px;
+  cursor: ew-resize;
+  background: #434343;
+  box-shadow: -80px 0 0 80px #43e5f7;
+}
+
+input {
+  width: 100%;
+  border-radius: 8px;
+  padding: .5rem;
+}
+textarea {
+  width: 100%;
+  height: 6rem;
+  border-radius: 8px;
+  padding: .5rem;
+}
+
+.upload-snippet {
+  width: 75%;
+    margin-left: auto;
+    background: white;
+    padding: 5px;
+    margin: 5px 0;
+}
+/* Utilities */
+
+.push-left {
+  margin-left: auto;
+}
+
+.text-sm {
+  font-size: 0.85rem;
+}
+
+.text-danger {
+  font-weight: bold;
+  color: var(--color-red);
+}
+
+.text-success {
+  font-weight: bold;
+  color: var(--color-green);
+}
+
+.text-info {
+  font-weight: bold;
+  color: var(--color-blue);
+}
+
+.text-invis {
+  color: var(--color-bg);
+}
+
+.box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.box-center {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  text-align: center;
+}
+
+.hidden { display:  none; }
+
+/* mods */
+
+.no-wrap {
+  flex-wrap: nowrap;
+}
+.no-pad {
+  padding: 0;
+}
+.pad-sides {
+  padding: 0 1rem;
+}
+.no-gap {
+  gap: 0;
+}
+.big-gap {
+  gap: 4rem;
+}
+.gap {
+  gap: 1rem;
+}
+.gap-tiny {
+  gap: 0.3rem;
+}
+.gap-tiny2 {
+  gap: 0.2rem;
+}
+
+.mrg {
+  margin: 1rem;
+}
+.mrg2 {
+  margin: 2rem;
+}
+
+.stretch {
+  align-self: stretch;
+}
+.mw15 {
+  max-width: 20rem;
+}
+
+.pad {
+  padding: 1rem;
+}
+
+.no-mrg {
+  margin: 0;
+  margin-block-end: 0;
+  margin-block-start: 0;
+}
+.mrg-ends {
+  margin: 1rem 0;
+}
+.small-children * {
+  height: .8rem;
+  font-size: .8rem;
+  align-self: center;
+}
+
+.a-center {
+  align-self: center;
+}
+.corners {
+  border-radius: 8px;
+}
+.fit-width {
+  min-width: fit-content;
+}
+.fit-width2 {
+  width: fit-content;
+}
+.move-up {
+  transform: translateY(-4rem);
+}
+
+.hover:hover {
+  border: 3px solid var(--color-brand);
+}
+
+.h-3 {
+  height: 3rem;
+}
+
+.svg-icon {
+  top: .025rem;
+  position: relative;
+}
+
+.rem30 {
+  width: 30rem;
+}
+.rem60 {
+  width: 60rem;
+}
+.rem4 {
+  width: 4rem;
+}
+
+.home-card {
+  width: 15rem;
+  height: 6rem;
 }
