--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,7 @@ body {
   --color-link: #3b49df;
 }
 
+
 main {
   top: 0;
   margin-top: 8rem;
@@ -719,3 +720,23 @@ hr {
 .grow {
   flex-grow: 100;
 }
+
+.tab1 {
+  margin-left: 1rem;
+}
+.tab2 {
+  margin-left: 3rem;
+}
+.tab3 {
+  margin-left: 5rem;
+}
+
+li {
+  margin-block-start: .2rem;
+  margin-block-end: .2rem;
+}
+.li {
+  margin-block-start: .2rem;
+  margin-block-end: .2rem;
+}
+
